--- a/skyscanner_flight_search/css/style.css
+++ b/skyscanner_flight_search/css/style.css
@@ -6,12 +6,12 @@ body {
 img {
 	width: 1312px;
 }
-a{
+a {
 	color: #00b2d6;
 	text-decoration: none;
 }
-h1 {
-	
+h2 {
+	margin-top: 80px;
 }
 div {
 	
