--- a/skyscanner_flight_search/css/style.css
+++ b/skyscanner_flight_search/css/style.css
@@ -1,26 +1,48 @@
 body {
-	width: 1312px;
-	margin: auto;
-	font-family: sans-serif;
+	
+	font-family: helvetica,sans-serif;
 }
-img {
-	width: 1312px;
-}
+
 a {
 	color: #00b2d6;
 	text-decoration: none;
 }
 h2 {
 	margin-top: 80px;
+	margin-bottom: 40px;
+	font-weight: normal;
+}
+h3 {
+	font-weight: normal;
+}
+h1 {
+	font-weight: normal;
 }
 div {
 	
 }
-
+.blanco {
+	color: #ffffff;
+}
 .content {
 	margin-bottom: 80px;
+	width: 1312px;
+	margin: auto;
 }
-
+.content-hero {
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
+.content-container {
+	background-color: rgba(0, 0, 0, 0.05);
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
+.content-reinterpretation {
+	background-color: rgba(30, 30, 30, 1);
+	padding-top: 40px;
+	padding-bottom: 40px;
+}
 .footer {
 	margin-bottom: 80px;
 	padding-top: 80px;
